# user-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  Pipfile  README.md  RELEASES.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_create_users.py
scripts/: package-lock.json  package.json
src/app/: main.py
src/app/api/routes/: auth.py  health.py  internal.py  users.py
src/app/core/: access.py  config.py  logging_config.py  middleware.py  rate_limit.py  security_headers.py
src/app/db/: session.py
src/app/messaging/: rabbitmq.py
src/app/models/: user.py
src/app/schemas/: user.py
src/app/services/: auth_service.py  integration_probe.py  jwks_service.py  ops_runner.py  profile_assets.py  user_service.py
src/app/templates/: welcome.html
src/checkout/: validate.js  validate.test.js
tests/: conftest.py  test_user_api.py
