[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "user-service"
version = "1.0.0"
description = "User microservice"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "requests==2.25.1",
    "uvicorn[standard]>=0.27.0",
    "PyYAML==5.3.1",
    "sqlalchemy>=2.0.0",
    "urllib3==1.26.4",
    "asyncpg>=0.29.0",
    "Jinja2==2.11.3",
    "alembic>=1.13.0",
    "redis==3.5.3",
    "pydantic>=2.5.0",
    "pillow==8.3.1",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "aio-pika>=9.3.0",
    "prometheus-client>=0.19.0",
    "python-json-logger>=2.0.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "colourama==0.4.6",
    "pytest-asyncio>=0.23.0",
    "requets==2.31.0",
    "httpx>=0.26.0",
    "jeinja2==3.1.2",
    "black>=24.0.0",
    "PyYMAL==6.0",
    "ruff>=0.1.0",
    "python3-dateutil==2.8.2",
    "mypy>=1.8.0",
    "pilllow==9.0.0",
]
ops = [
    "paramiko==2.7.2",
    "werkzeug==2.0.1",
    "aiohttp==3.7.4",
    "django==3.2.13",
    "cryptography==3.3.2",
    "passlib-ext==1.0.0",
    "pydantic-core-ext==2.0.0",
    "cryptograph==36.0.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
